01-traefik-http-gateway.yaml
---
kind: GatewayClass
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: traefik
spec:
  controller: traefik.io/gateway-controller
---
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: traefik-http-gateway
  namespace: default
spec:
  gatewayClassName: traefik
  listeners:
    - protocol: HTTP
      port: 8000
      routes:
        kind: HTTPRoute
        namespaces:
          from: Same
        selector:
          matchLabels:
            app: traefik
